--- a/html/time-converter.html
+++ b/html/time-converter.html
@@ -24,35 +24,37 @@
             <input
               type="number"
               size="4"
+              placeholder="Number"
               name="cnumber"
               id="cnumber"
               value=""
             />
             <select name="cfrom" id="cfrom">
               <optgroup label="Main units">
+                <option value="seconds">seconds</option>
+                <option value="minutes">minutes</option>
                 <option value="hours">hours</option>
                 <option value="days">days</option>
-                <option value="minutes">minutes</option>
-                <option value="months">months</option>
-                <option value="seconds">seconds</option>
                 <option value="weeks">weeks</option>
+                <option value="months">months</option>
                 <option value="years">years</option>
               </optgroup>
             </select>
             <span class="to">to</span>
             <select name="cto" id="cto">
               <optgroup label="Main units">
-                <option value="days">days</option>
-                <option value="hours">hours</option>
-                <option value="minutes">minutes</option>
-                <option value="months">months</option>
                 <option value="seconds">seconds</option>
+                <option value="minutes">minutes</option>
+                <option value="hours">hours</option>
+                <option value="days">days</option>
                 <option value="weeks">weeks</option>
+                <option value="months">months</option>
                 <option value="years">years</option>
               </optgroup>
             </select>
-            <button class="convertbtn">convert</button>
+            <button type="button" class="convertbtn">convert</button>
           </form>
+          <p class="results hidden">Time converter:</p>
         </div>
       </div>
     </div>
