Added hour conversions and changed some styling
Added hours to... conversions and then implemented differernt stylings

--- a/html/index.html
+++ b/html/index.html
@@ -24,12 +24,13 @@
       </div>
       <ul id="categories">
         <li>
-          <a href="#">
-            <img src="../pictures/acceleration.png" alt="" />
+          <a href="../html/time-converter.html">
+            <img src="../pictures/timepng.png" alt="" />
           </a>
           <br />
-          <a href="#">Acceleration Converter</a>
+          <a href="../html/time-converter.html">Time Converter</a>
         </li>
+
         <li>
           <a href="#">
             <img src="../pictures/area.png" alt="" />
@@ -46,10 +47,10 @@
         </li>
         <li>
           <a href="#">
-            <img src="../pictures/fuel.png" alt="" />
+            <img src="../pictures/bmi.png" alt="" />
           </a>
           <br />
-          <a href="#">Fuel consumption Converter</a>
+          <a href="#">Body Mass index</a>
         </li>
         <li>
           <a href="#">
@@ -80,11 +81,11 @@
           <a href="#">Temperature Converter</a>
         </li>
         <li>
-          <a href="../html/time-converter.html">
-            <img src="../pictures/timepng.png" alt="" />
+          <a href="#">
+            <img src="../pictures/acceleration.png" alt="" />
           </a>
           <br />
-          <a href="../html/time-converter.html">Time Converter</a>
+          <a href="#">Acceleration Converter</a>
         </li>
         <li>
           <a href="#">
