Added Area converter html
Added changes to options to html

--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
         </li>
 
         <li>
-          <a href="#">
+          <a href="../html/Area-converter.html">
             <img src="../pictures/area.png" alt="" />
           </a>
           <br />
