Changing the entire conversion process

--- a/html/Area-converter.html
+++ b/html/Area-converter.html
@@ -68,6 +68,6 @@
         </div>
       </div>
     </div>
-    <script src="../src/time.js"></script>
+    <script src="../src/"></script>
   </body>
 </html>
