--- a/html/time-converter.html
+++ b/html/time-converter.html
@@ -54,7 +54,7 @@
             </select>
             <button type="button" class="convertbtn">convert</button>
           </form>
-          <p class="results hidden">Time converter:</p>
+          <p class="results hidden"></p>
         </div>
       </div>
     </div>
