Cleaned up and refactored the entire js page

--- a/html/time-converter.html
+++ b/html/time-converter.html
@@ -31,6 +31,7 @@
             />
             <select name="cfrom" id="cfrom">
               <optgroup label="Main units">
+                <option value="blank"></option>
                 <option value="seconds">seconds</option>
                 <option value="minutes">minutes</option>
                 <option value="hours">hours</option>
@@ -43,6 +44,7 @@
             <span class="to">to</span>
             <select name="cto" id="cto">
               <optgroup label="Main units">
+                <option value="blank"></option>
                 <option value="seconds">seconds</option>
                 <option value="minutes">minutes</option>
                 <option value="hours">hours</option>
@@ -54,7 +56,7 @@
             </select>
             <button type="button" class="convertbtn">convert</button>
           </form>
-          <p class="results hidden"></p>
+          <p class="results hidden">!!!!!!!!!</p>
         </div>
       </div>
     </div>
