Added a hash table
Trying to figure out how to implement a hash table into my conversions

--- a/html/time-converter.html
+++ b/html/time-converter.html
@@ -56,7 +56,7 @@
             </select>
             <button type="button" class="convertbtn">convert</button>
           </form>
-          <p class="results hidden">!!!!!!!!!</p>
+          <p class="results hidden">Conversion</p>
         </div>
       </div>
     </div>
