Added the BMI page
added the bmi converter html and css page

--- a/html/index.html
+++ b/html/index.html
@@ -39,11 +39,11 @@
           <a href="#">Area converter</a>
         </li>
         <li>
-          <a href="#">
+          <a href="../html/bmi-converter.html">
             <img src="../pictures/bmi.png" alt="" />
           </a>
           <br />
-          <a href="#">Body Mass index</a>
+          <a href="../html/bmi-converter.html">Body Mass index</a>
         </li>
         <li>
           <a href="#">
