--- a/html/index.html
+++ b/html/index.html
@@ -88,7 +88,7 @@
           <br />
           <a href="#">Acceleration Converter</a>
         </li>
-        <li>
+        <li class="volume">
           <a href="#">
             <img src="../pictures/volumepng.png" alt="" />
           </a>
