--- a/html/Area-converter.html
+++ b/html/Area-converter.html
@@ -49,7 +49,7 @@
             <select name="cto" id="cto">
               <optgroup label="Main units">
                 <option value="acres">acres</option>
-                <option value="squarecentimeters">Square Centimeters</option>
+                <option value="square centimeters">Square Centimeters</option>
                 <option value="squaredecameters">Square Decameters</option>
                 <option value="squaredecimeters">Square Decimeters</option>
                 <option value="squarefeet">Square Feet</option>
@@ -68,6 +68,6 @@
         </div>
       </div>
     </div>
-    <script src="../src/"></script>
+    <script src="../src/area.js"></script>
   </body>
 </html>
