--- a/html/Area-converter.html
+++ b/html/Area-converter.html
@@ -18,54 +18,54 @@
     <div class="page">
       <div class="cform">
         <img src="../pictures/area.png" alt="" />
-        <div class="cformr">
-          <h1 class="h1Message">Area converter!</h1>
-          <form action="/calculate" method="post" id="convert_form">
-            <input
-              type="number"
-              size="4"
-              placeholder="Number"
-              name="cnumber"
-              id="cnumber"
-              value=""
-            />
-            <select name="cfrom" id="cfrom">
-              <optgroup label="Main units">
-                <option value="acres">acres</option>
-                <option value="squarecentimeters">Square Centimeters</option>
-                <option value="squaredecameters">Square Decameters</option>
-                <option value="squaredecimeters">Square Decimeters</option>
-                <option value="squarefeet">Square Feet</option>
-                <option value="squarehectometers">Square hectometers</option>
-                <option value="squareinches">Square inches</option>
-                <option value="squarekilometers">Square Kilometers</option>
-                <option value="squaremeters">Square Meters</option>
-                <option value="squaremiles">Square Miles</option>
-                <option value="squaremilimeters">Square Milimeters</option>
-                <option value="squareyards">Square Yards</option>
-              </optgroup>
-            </select>
-            <span class="to">to</span>
-            <select name="cto" id="cto">
-              <optgroup label="Main units">
-                <option value="acres">acres</option>
-                <option value="square centimeters">Square Centimeters</option>
-                <option value="squaredecameters">Square Decameters</option>
-                <option value="squaredecimeters">Square Decimeters</option>
-                <option value="squarefeet">Square Feet</option>
-                <option value="squarehectometers">Square hectometers</option>
-                <option value="squareinches">Square inches</option>
-                <option value="squarekilometers">Square Kilometers</option>
-                <option value="squaremeters">Square Meters</option>
-                <option value="squaremiles">Square Miles</option>
-                <option value="squaremilimeters">Square Milimeters</option>
-                <option value="squareyards">Square Yards</option>
-              </optgroup>
-            </select>
-            <button type="button" class="convertbtn">convert</button>
-          </form>
-          <p class="results hidden">Time converter:</p>
-        </div>
+        <h1 class="h1Message">Area converter!</h1>
+      </div>
+      <div class="cformr">
+        <form action="/calculate" method="post" id="convert_form">
+          <input
+            type="number"
+            size="4"
+            placeholder="Number"
+            name="cnumber"
+            id="cnumber"
+            value=""
+          />
+          <select name="cfrom" id="cfrom">
+            <optgroup label="Main units">
+              <option value="acres">acres</option>
+              <option value="squarecentimeters">Square Centimeters</option>
+              <option value="squaredecameters">Square Decameters</option>
+              <option value="squaredecimeters">Square Decimeters</option>
+              <option value="squarefeet">Square Feet</option>
+              <option value="squarehectometers">Square hectometers</option>
+              <option value="squareinches">Square inches</option>
+              <option value="squarekilometers">Square Kilometers</option>
+              <option value="squaremeters">Square Meters</option>
+              <option value="squaremiles">Square Miles</option>
+              <option value="squaremilimeters">Square Milimeters</option>
+              <option value="squareyards">Square Yards</option>
+            </optgroup>
+          </select>
+          <span class="to">to</span>
+          <select name="cto" id="cto">
+            <optgroup label="Main units">
+              <option value="acres">acres</option>
+              <option value="Square Centimeters">Square Centimeters</option>
+              <option value="squaredecameters">Square Decameters</option>
+              <option value="squaredecimeters">Square Decimeters</option>
+              <option value="squarefeet">Square Feet</option>
+              <option value="squarehectometers">Square hectometers</option>
+              <option value="squareinches">Square inches</option>
+              <option value="squarekilometers">Square Kilometers</option>
+              <option value="squaremeters">Square Meters</option>
+              <option value="squaremiles">Square Miles</option>
+              <option value="squaremilimeters">Square Milimeters</option>
+              <option value="squareyards">Square Yards</option>
+            </optgroup>
+          </select>
+          <button type="button" class="convertbtn">convert</button>
+        </form>
+        <p class="results hidden">Time converter:</p>
       </div>
     </div>
     <script src="../src/area.js"></script>
