Rewote the entire CSS design
Rewote all of the CSS to really make the page responsive

--- a/html/Area-converter.html
+++ b/html/Area-converter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/landingpage.css" />
-    <link rel="stylesheet" href="../css/conversion.css" />
+    <link rel="stylesheet" href="../css/responsive-converter.css" />
     <title>Time</title>
   </head>
   <body>
@@ -30,42 +30,48 @@
             id="cnumber"
             value=""
           />
+          <span class="fromspan">from</span>
           <select name="cfrom" id="cfrom">
             <optgroup label="Main units">
+              <option value="empty"></option>
               <option value="acres">acres</option>
-              <option value="squarecentimeters">Square Centimeters</option>
-              <option value="squaredecameters">Square Decameters</option>
-              <option value="squaredecimeters">Square Decimeters</option>
-              <option value="squarefeet">Square Feet</option>
-              <option value="squarehectometers">Square hectometers</option>
-              <option value="squareinches">Square inches</option>
-              <option value="squarekilometers">Square Kilometers</option>
-              <option value="squaremeters">Square Meters</option>
-              <option value="squaremiles">Square Miles</option>
-              <option value="squaremilimeters">Square Milimeters</option>
-              <option value="squareyards">Square Yards</option>
+
+              <option value="Square Centimeters">Square Centimeters</option>
+              <option value="Square Decameters">Square Decameters</option>
+              <option value="Square Decimeters">Square Decimeters</option>
+              <option value="Square Feet">Square Feet</option>
+              <option value="Square Hectometers">Square hectometers</option>
+              <option value="Square Inches">Square inches</option>
+              <option value="Square Kilometers">Square Kilometers</option>
+              <option value="Square Meters">Square Meters</option>
+              <option value="Square Miles">Square Miles</option>
+              <option value="Square Milimeters">Square Milimeters</option>
+              <option value="Square Yards">Square Yards</option>
             </optgroup>
           </select>
           <span class="to">to</span>
           <select name="cto" id="cto">
             <optgroup label="Main units">
+              <option value="empty"></option>
               <option value="acres">acres</option>
               <option value="Square Centimeters">Square Centimeters</option>
-              <option value="squaredecameters">Square Decameters</option>
-              <option value="squaredecimeters">Square Decimeters</option>
-              <option value="squarefeet">Square Feet</option>
-              <option value="squarehectometers">Square hectometers</option>
-              <option value="squareinches">Square inches</option>
-              <option value="squarekilometers">Square Kilometers</option>
-              <option value="squaremeters">Square Meters</option>
-              <option value="squaremiles">Square Miles</option>
-              <option value="squaremilimeters">Square Milimeters</option>
-              <option value="squareyards">Square Yards</option>
+              <option value="Square Decameters">Square Decameters</option>
+              <option value="Square Decimeters">Square Decimeters</option>
+              <option value="Square Feet">Square Feet</option>
+              <option value="Square Hectometers">Square hectometers</option>
+              <option value="Square Inches">Square inches</option>
+              <option value="Square Kilometers">Square Kilometers</option>
+              <option value="Square Meters">Square Meters</option>
+              <option value="Square Miles">Square Miles</option>
+              <option value="Square Milimeters">Square Milimeters</option>
+              <option value="Square Yards">Square Yards</option>
             </optgroup>
           </select>
           <button type="button" class="convertbtn">convert</button>
         </form>
-        <p class="results hidden">Time converter:</p>
+      </div>
+      <div class="results hidden">
+        <p>Time converter:</p>
       </div>
     </div>
     <script src="../src/area.js"></script>
