--- a/html/time-converter.html
+++ b/html/time-converter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/landingpage.css" />
-    <link rel="stylesheet" href="../css/conversion.css" />
+    <link rel="stylesheet" href="../css/responsive-converter.css" />
     <title>Time</title>
   </head>
   <body>
@@ -57,7 +57,9 @@
           </select>
           <button type="button" class="convertbtn">convert</button>
         </form>
-        <p class="results hidden">Conversion</p>
+      </div>
+      <div class="results hidden">
+        <p>Time converter:</p>
       </div>
     </div>
 
