Minor changes and additions
Changed some of the positioning of the conversion form in smaller formats
Added page 2 that will consist of past conversions

--- a/html/time-converter.html
+++ b/html/time-converter.html
@@ -30,6 +30,7 @@
             id="cnumber"
             value=""
           />
+          <span class="fromspan">from</span>
           <select name="cfrom" id="cfrom">
             <optgroup label="Main units">
               <option value="blank"></option>
@@ -61,6 +62,14 @@
       <div class="results hidden">
         <p>Time converter:</p>
       </div>
+    </div>
+    <hr />
+    <div class="page2">
+      <ul>
+        <li><a>Recent conversion</a></li>
+        <li><a>Popular converions</a></li>
+        <li><a></a></li>
+      </ul>
     </div>
 
     <br />
