Responsive and some JS tweaks
CSS > Changed up some styling added more responsive elements to fit all mobile devices, changed some styling to the converter pages to add more pop

JS > changed the gender selector from displaying a female and male icon to simplifying it and changing the background to pink and blue

CSS > Moved the navbar from landingpage CSS to creating a brand new css to hold the navbar styling

--- a/html/Area-converter.html
+++ b/html/Area-converter.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/landingpage.css" />
     <link rel="stylesheet" href="../css/responsive-converter.css" />
+    <link rel="stylesheet" href="../css/header.css" />
     <title>Time</title>
   </head>
   <body>
