--- a/html/index.html
+++ b/html/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/landingpage.css" />
+    <link rel="stylesheet" href="../css/header.css" />
 
     <title>unit converter</title>
   </head>
 
-  <body>
+  <body class="landingpagebody">
     <div class="headerc">
       <div class="header">
         <a href="../html/index.html">
