--- a/html/time-converter.html
+++ b/html/time-converter.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/landingpage.css" />
     <link rel="stylesheet" href="../css/responsive-converter.css" />
+    <link rel="stylesheet" href="../css/header.css" />
     <title>Time</title>
   </head>
   <body>
