Added load on animations
> JS: added female and male gradient backgrounds on change event listener

> CSS: added load in animations on the landing page, converter pages and on BMI page

--- a/html/bmi-converter.html
+++ b/html/bmi-converter.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/header.css" />
     <title>Bmi</title>
   </head>
-  <body>
+  <body class="">
     <!-- Header -->
     <div class="headerc">
       <div class="header">
