--- a/html/time-converter.html
+++ b/html/time-converter.html
@@ -16,6 +16,7 @@
         </a>
       </div>
     </div>
+
     <div class="page">
       <div class="cform">
         <img src="../pictures/timepng.png" alt="" />
@@ -65,13 +66,13 @@
       </div>
     </div>
     <hr />
-    <div class="page2">
+    <footer class="page2">
       <ul>
         <li><a>Recent conversion</a></li>
         <li><a>Popular converions</a></li>
         <li><a></a></li>
       </ul>
-    </div>
+    </footer>
 
     <br />
 
