Moved html files, added BMIn js
> html: moved html files out side of the html file so its more accessible

> CSS: added the modal hidden to BMI css so i can open and close it with JS

> JS: added opening and closing of the modal window, created some values for height and weight inputs

--- a/Area-converter.html
+++ b/Area-converter.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/landingpage.css" />
-    <link rel="stylesheet" href="../css/responsive-converter.css" />
-    <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="./css/landingpage.css" />
+    <link rel="stylesheet" href="./css/responsive-converter.css" />
+    <link rel="stylesheet" href="./css/header.css" />
     <title>Time</title>
   </head>
   <body>
     <div class="headerc">
       <div class="header">
-        <a href="../html/index.html">
+        <a href="index.html">
           <h3>Converter.io</h3>
         </a>
       </div>
     </div>
     <div class="page">
       <div class="cform">
-        <img src="../pictures/area.png" alt="" />
+        <img src="./pictures/area.png" alt="" />
         <h1 class="h1Message">Area converter!</h1>
       </div>
       <div class="cformr">
@@ -75,6 +75,14 @@
         <p>Time converter:</p>
       </div>
     </div>
+
+    <footer class="page2">
+      <ul>
+        <li><a>Recent conversion</a></li>
+        <li><a>Popular converions</a></li>
+        <li><a></a></li>
+      </ul>
+    </footer>
     <script src="../src/area.js"></script>
   </body>
 </html>
