--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/landingpage.css" />
-    <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="./css/landingpage.css" />
+    <link rel="stylesheet" href="./css/header.css" />
 
     <title>unit converter</title>
   </head>
@@ -12,7 +12,7 @@
   <body class="landingpagebody">
     <div class="headerc">
       <div class="header">
-        <a href="../html/index.html">
+        <a href="index.html">
           <h3>Converter.io</h3>
         </a>
       </div>
@@ -25,30 +25,30 @@
       </div>
       <ul id="categories">
         <li>
-          <a href="../html/time-converter.html">
-            <img src="../pictures/timepng.png" alt="" />
+          <a href="time-converter.html">
+            <img src="./pictures/timepng.png" alt="" />
           </a>
           <br />
-          <a href="../html/time-converter.html">Time Converter</a>
+          <a href="time-converter.html">Time Converter</a>
         </li>
 
         <li>
-          <a href="../html/Area-converter.html">
-            <img src="../pictures/area.png" alt="" />
+          <a href="Area-converter.html">
+            <img src="./pictures/area.png" alt="" />
           </a>
           <br />
           <a href="#">Area converter</a>
         </li>
         <li>
-          <a href="../html/bmi-converter.html">
-            <img src="../pictures/bmi.png" alt="" />
+          <a href="bmi-converter.html">
+            <img src="./pictures/bmi.png" alt="" />
           </a>
           <br />
-          <a href="../html/bmi-converter.html">Body Mass index</a>
+          <a href="/bmi-converter.html">Body Mass index</a>
         </li>
         <li>
           <a href="#">
-            <img src="../pictures/dataconversion.png" alt="" />
+            <img src="./pictures/dataconversion.png" alt="" />
           </a>
           <br />
           <a href="#">Data Converter</a>
@@ -56,42 +56,42 @@
 
         <li>
           <a href="#">
-            <img src="../pictures/length.png" alt="" />
+            <img src="./pictures/length.png" alt="" />
           </a>
           <br />
           <a href="#">Length Converter</a>
         </li>
         <li>
           <a href="#">
-            <img src="../pictures/mass.png" alt="" />
+            <img src="./pictures/mass.png" alt="" />
           </a>
           <br />
           <a href="#">Mass Converter</a>
         </li>
         <li>
           <a href="#">
-            <img src="../pictures/speedconversion.png" alt="" />
+            <img src="./pictures/speedconversion.png" alt="" />
           </a>
           <br />
           <a href="#">Speed Converter</a>
         </li>
         <li>
           <a href="#">
-            <img src="../pictures/temperature.png" alt="" />
+            <img src="./pictures/temperature.png" alt="" />
           </a>
           <br />
           <a href="#">Temperature Converter</a>
         </li>
         <li>
           <a href="#">
-            <img src="../pictures/acceleration.png" alt="" />
+            <img src="./pictures/acceleration.png" alt="" />
           </a>
           <br />
           <a href="#">Acceleration Converter</a>
         </li>
         <li class="volume">
           <a href="#">
-            <img src="../pictures/volumepng.png" alt="" />
+            <img src="./pictures/volumepng.png" alt="" />
           </a>
           <br />
           <a href="#">Volume Converter</a>
