--- a/time-converter.html
+++ b/time-converter.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/landingpage.css" />
-    <link rel="stylesheet" href="../css/responsive-converter.css" />
-    <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="./css/landingpage.css" />
+    <link rel="stylesheet" href="./css/responsive-converter.css" />
+    <link rel="stylesheet" href="./css/header.css" />
     <title>Time</title>
   </head>
   <body>
     <div class="headerc">
       <div class="header">
-        <a href="../html/index.html">
+        <a href="index.html">
           <h3>Converter.io</h3>
         </a>
       </div>
@@ -19,7 +19,7 @@
 
     <div class="page">
       <div class="cform">
-        <img src="../pictures/timepng.png" alt="" />
+        <img src="./pictures/timepng.png" alt="" />
         <h1 class="h1Message">Time converter!</h1>
       </div>
       <div class="cformr">
