--- a/bmi-converter.html
+++ b/bmi-converter.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/landingpage.css" />
-    <link rel="stylesheet" href="../css/bmi-converter.css" />
-    <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="./css/landingpage.css" />
+    <link rel="stylesheet" href="./css/bmi-converter.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/convertbtn.css" />
     <title>Bmi</title>
   </head>
   <body class="">
     <!-- Header -->
     <div class="headerc">
       <div class="header">
-        <a href="../html/index.html">
+        <a href="index.html">
           <h3>Converter.io</h3>
         </a>
       </div>
@@ -20,7 +21,7 @@
     <!-- start of the first page -->
     <div class="Bmipage">
       <div class="c-form">
-        <img src="../pictures/bmi.png" alt="" />
+        <img src="./pictures/bmi.png" alt="" />
         <h1 class="h1Message">Bmi caculator!</h1>
       </div>
       <div class="gender-form">
@@ -33,7 +34,6 @@
               <option value="Female">Female</option>
             </optgroup>
           </select>
-          <hr />
         </form>
       </div>
       <div class="height-form">
@@ -66,16 +66,49 @@
           id="weight"
           value=""
         />
-        <hr />
       </div>
       <div class="convert-button">
         <button type="button" id="convertbtn">convert</button>
       </div>
-      <div>
-        <p class="results hidden">Conversion</p>
+    </div>
+    <!--Modal-->
+    <div class="hidden-modal" id="modal-full">
+      <div class="modal center">
+        <div class="close-modal-btn">
+          <button class="close-modal">&times;</button>
+        </div>
+        <div class="conversion-modal-title">
+          <h1 class="bmi-h1">BMI Results</h1>
+        </div>
+        <div class="results-modal">
+          <p class="resultsP">
+            <b>BMI Categories:</b>
+            <br />
+            Underweight = < 18.5
+            <br />
+            Normal weight = 18.5–24.9
+            <br />
+            Overweight = 25–29.9
+            <br />
+            Obesity = BMI of 30 or greater
+          </p>
+        </div>
+        <div class="input-results">
+          <p class="p-results">Your BMI:</p>
+          <input
+            type="text"
+            size="4"
+            placeholder="BMI"
+            name="cnumber"
+            id="bmiresult"
+            value=""
+          />
+        </div>
       </div>
     </div>
+    <div class="overlay hidden"></div>
 
+    <script src="../src/conversion-btn.js"></script>
     <script src="../src/bmi.js"></script>
   </body>
 </html>
